--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "nodejs-Custom-Version-Sample",
-  "version": "1.0.1",
-  "description": "OpenShift Node.js Custom Version Sample Application",
-  "keywords": [
-    "OpenShift",
-    "Node.js",
-    "application",
-    "openshift"
-  ],
-  "author": {
-    "name": "ramr",
-    "email": "ramr@example.org",
-    "url":  "http://www.openshift.com/"
-  },
-  "homepage": "http://www.openshift.com/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ramr/nodejs-custom-version-openshift"
-  },
-
-  "engines": {
-    "node": ">= 0.6.0",
-    "npm": ">= 1.0.0"
-  },
-
-  "dependencies": {
-    "express": "*"
-  },
-  "devDependencies": {},
-  "bundleDependencies": [],
-
+  "name": "BratinPics",
+  "version": "0.0.1",
   "private": true,
-  "main": "server.js"
+  "main": "server.js",
+  "scripts": {
+    "start": "node --use_strict server.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.1",
+    "connect-mongo": "^1.2.0",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "exif": "^0.6.0",
+    "exif-parser": "^0.1.9",
+    "express": "~4.13.1",
+    "express-generator": "^4.13.1",
+    "express-session": "^1.13.0",
+    "helmet": "^2.1.1",
+    "httpolyglot": "^0.1.1",
+    "jade": "~1.11.0",
+    "moment": "^2.13.0",
+    "mongoose": "^4.4.20",
+    "morgan": "~1.6.1",
+    "multer": "^1.1.0",
+    "nodemailer": "^2.4.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
+    "serve-favicon": "~2.3.0",
+    "xoauth2": "^1.1.0"
+  }
 }
