--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "BratinPics",
   "version": "0.0.1",
   "private": true,
-  "main": "start.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node --use_strict start.js"
+    "start": "node --use_strict server.js"
   },
   "dependencies": {
     "body-parser": "^1.15.1",
