--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "express": "~4.13.1",
     "express-generator": "^4.13.1",
     "express-session": "^1.13.0",
-    "google-auth-library": "^0.9.8",
-    "googleapis": "^8.2.0",
     "helmet": "^2.1.1",
     "httpolyglot": "^0.1.1",
     "jade": "~1.11.0",
+    "mailgun-js": "^0.7.11",
     "moment": "^2.13.0",
     "mongoose": "^4.4.20",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "node-uuid": "^1.4.7",
+    "nodemailer": "^2.4.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
