removed reference to unused npm

--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "express": "~4.13.1",
     "express-generator": "^4.13.1",
     "express-session": "^1.13.0",
+    "flickrapi": "^0.4.2",
     "helmet": "^2.1.1",
-    "httpolyglot": "^0.1.1",
     "jade": "~1.11.0",
-    "mailgun-js": "^0.7.11",
     "moment": "^2.13.0",
     "mongoose": "^4.4.20",
     "morgan": "~1.6.1",
