--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "connect-mongo": "^1.2.0",
+    "content-filter": "^1.0.22",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "exif": "^0.6.0",
     "exif-parser": "^0.1.9",
     "express": "~4.13.1",
     "express-generator": "^4.13.1",
+    "express-mongo-sanitize": "^1.3.0",
     "express-session": "^1.13.0",
     "flickrapi": "^0.4.2",
     "helmet": "^2.1.1",
